--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,11 +24,11 @@ services:
       - "5000:5000" # Expose backend API on port 5000
     restart: always
     volumes:
-      - ./backend:/app # Useful for development (hot-reload)
+      - ./back-end:/app # Useful for development (hot-reload)
+      - /app/node_modules
     environment:
-      - NODE_ENV=production
       - PORT=5000
-      - MONGO_URI=mongodb+srv://<username>:<password>@cluster.mongodb.net/<dbname>?retryWrites=true&w=majority
+      - MONGO_URI=mongodb+srv://wassim:0000@nodeexpress.mr7l440.mongodb.net/cruddevops?retryWrites=true&w=majority&appName=nodeexpress
 
   mongodb:
     image: mongo:5 # Official MongoDB image
